--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 
 networks:
-  traffic-wizard-network:
-    name: traffic-wizard-network
+  galaxydb-network:
+    name: galaxydb-network
     driver: bridge
 
 services:
@@ -11,9 +11,9 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./server:/server
-    image: traffic-wizard-lb
+    image: galaxydb-lb
     ports:
       - "5000:5000"
     privileged: true
     networks:
-      - traffic-wizard-network
+      - galaxydb-network
