--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,10 +12,10 @@ RUN go mod download
 COPY *.go ./
 
 # build
-RUN go build -o /traffic-wizard-server
+RUN go build -o /galaxydb-server
 
 # the application is going to listen in the port 5000
 EXPOSE 5000
 
 # run
-CMD ["/traffic-wizard-server"]
+CMD ["/galaxydb-server"]
